gccida/g0/resolve_unique_section
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/resolve_unique_section/src/varasm.c:930:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/resolve_unique_section/src/varasm.c:973:10: error: use of undeclared identifier 'prefixes_21'
prefix = prefixes_21[sec][( BYTE2( decla->block.supercontext) & 8) != 0]; 
         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/resolve_unique_section/src/obj/varasm.o] Error 1
